--- a/.env_sample
+++ b/.env_sample
@@ -5,4 +5,4 @@ DB_HOST= Base_de_datos_host,
 DB_PORT= 5432,
 DB_DIALECT= postgres
 
-//API_SERVICE_URL= http://localhost:3001
+//API_SERVICE_URL= http://localhost:3001 //
