--- a/.env_sample
+++ b/.env_sample
@@ -2,7 +2,7 @@ DB_NAME= nombre_de_la_base_de_datos,
 DB_USER= usuario_base_de_datos,
 DB_PASSWORD= Base_de_datos_contraseña,
 DB_HOST= Base_de_datos_host,
-DB_PORT= 5432,
-DB_DIALECT= postgres
+DB_PORT= numero_de_puerto,
+DB_DIALECT= dialecto
 
 //API_SERVICE_URL= http://localhost:3001 //
